--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2 # use CircleCI 2.0
 jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
     docker: # run the steps with Docker
-      - image: circleci/php:7.2-apache-browsers # ...with this image as the primary container; this is where all `steps` will run
+      - image: circleci/php:7.2-apache-browsers-legacy # ...with this image as the primary container; this is where all `steps` will run
         environment:
           APP_ENV: production
           APP_DEBUG: true
