--- a/docker/conf/circleci-default.conf
+++ b/docker/conf/circleci-default.conf
@@ -32,12 +32,36 @@
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-	# For most configuration files from conf-available/, which are
-	# enabled or disabled at a global level, it is possible to
-	# include a line for only one particular virtual host. For example the
-	# following line enables the CGI configuration for this host only
-	# after it has been globally disabled with "a2disconf".
-	#Include conf-available/serve-cgi-bin.conf
 </VirtualHost>
+
+<IfModule mod_ssl.c>
+	<VirtualHost _default_:443>
+		ServerAdmin webmaster@localhost
+
+		DocumentRoot /home/circleci/project/public
+
+		ErrorLog ${APACHE_LOG_DIR}/error.log
+		CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+		SSLEngine on
+
+		SSLCertificateFile	/etc/apache2/ssl/ci-key-public
+		SSLCertificateKeyFile /etc/apache2/ssl/ci-key-private
+
+		<FilesMatch "\.(cgi|shtml|phtml|php)$">
+				SSLOptions +StdEnvVars
+		</FilesMatch>
+		<Directory /usr/lib/cgi-bin>
+				SSLOptions +StdEnvVars
+		</Directory>
+
+	<Directory /home/circleci/project/public>
+		AllowOverride All
+		Allow from All
+		Require all granted
+	</Directory>
+
+	</VirtualHost>
+</IfModule>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
