Update sf-design-system to 1.1.3

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/assets/css/app.css": "/assets/css/app.css",
+    "/assets/css/form-branding.css": "/assets/css/form-branding.css",
     "/assets/css/form-preview.css": "/assets/css/form-preview.css"
 }
