--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs: # a collection of steps
           CACHE_DRIVER: file
           QUEUE_DRIVER: sync
           SENTRY_DSN: https://b53658ff4ec749719da39905217d41e0@sentry.io/1366253
-      - image: circleci/mysql:5.6-ram
+      - image: circleci/mariadb:latest
         environment:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_ROOT_PASSWORD: '1234'
