--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - 80:80
       - 443:443
   db:
-    image: mysql:5.6
+    image: mariadb:latest
     environment:
       MYSQL_ROOT_PASSWORD: 1234
     volumes:
