--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,7 @@ jobs: # a collection of steps
             sudo cp /home/circleci/project/docker/conf/circleci-default.conf /etc/apache2/sites-available/000-default.conf
             sudo mkdir /etc/apache2/ssl
             sudo cp /home/circleci/project/docker/conf/ssl/ci-key-* /etc/apache2/ssl/ && sudo service apache2 start
+            sudo cp ~/project/docker/conf/mariadb.conf.d/custom.cnf /etc/mysql/mariadb.conf.d/custom.cnf
       # end to end testing
       - run:
           name: download nodejs
