--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs: # a collection of steps
           DB_PASSWORD: 1234
           CACHE_DRIVER: file
           QUEUE_DRIVER: sync
-      - image: circleci/mariadb:latest
+      - image: circleci/mariadb:10.1.19
         command: |
           --character-set-server=utf8mb4
           --collation-server=utf8mb4_bin
