--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "~7.3.14",
+        "php": ">=5.3.0 <7.4",
         "laravel/lumen-framework": "5.7.*",
         "fzaninotto/faker": "~1.4",
         "vlucas/phpdotenv": "^3.3",
