update .env file for CI build

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ DB_PASSWORD=1234
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
 MAIL_DRIVER=array
+MAIL_FROM_ADDRESS=donotreply@sf.gov
+MAIL_REPLYTO_ADDRESS=donotreply@sf.gov
